@@ -1,6 +1,8 @@
-# TODO: analyze should measure roughness as well; match spectral envelope automatically (eg start with schwa and mutate the formants and antiformants); soundgen - pitch2 for dual source (desynchronized vocal folds); AM aspiration noise (not really needed, except maybe for glottis > 0); soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
+# TODO: match spectral envelope automatically (eg start with schwa and mutate the formants and antiformants); soundgen - pitch2 for dual source (desynchronized vocal folds); AM aspiration noise (not really needed, except maybe for glottis > 0); soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
 
 # pitch_app: optional argument to load and open files in a folder; see a list of all uploaded files (add button - doing it with tooltips doesn't work); load audio + results to double-check old work
+
+# formant_app: selecting a sound segment, measuring formants automatically, then verifying and adjusting their frequencies as needed (using eg an interactive spectral slice + LPC plots), and saving the output (time stamps, annotations like vowel type, and the corrected formant measurements); interactive spectral slice where manual adjustments can be made, perhaps by dragging and dropping formant markers (?) and adjusted mean values can be saved along with annotations, all to a single excel file. Maybe it would even be possible to automatically compute, form the adjusted F1-F4 values, amalgamated formant measures such as deltaF (spacing) and apparent VTL and feed these into the same output excel file
 
 #' @import stats graphics utils grDevices shinyBS
 #' @encoding UTF-8
